[gd_scene load_steps=13 format=3 uid="uid://imd34hqm1vls"]

[ext_resource type="Script" uid="uid://btcmthvekilqm" path="res://hp_ui.gd" id="1_5xtq0"]
[ext_resource type="Texture2D" uid="uid://iu7a2ypsvtp1" path="res://assets/game_assets.png" id="4_l7265"]

[sub_resource type="AtlasTexture" id="AtlasTexture_iwxf0"]
atlas = ExtResource("4_l7265")
region = Rect2(154, 0, 22, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_40aov"]
atlas = ExtResource("4_l7265")
region = Rect2(22, 0, 22, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxvkh"]
atlas = ExtResource("4_l7265")
region = Rect2(44, 0, 22, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_qj10q"]
atlas = ExtResource("4_l7265")
region = Rect2(66, 0, 22, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0ayi"]
atlas = ExtResource("4_l7265")
region = Rect2(88, 0, 22, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ovep"]
atlas = ExtResource("4_l7265")
region = Rect2(110, 0, 22, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2a8n"]
atlas = ExtResource("4_l7265")
region = Rect2(132, 0, 22, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_vh03k"]
atlas = ExtResource("4_l7265")
region = Rect2(154, 0, 22, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mr4b"]
atlas = ExtResource("4_l7265")
region = Rect2(0, 0, 22, 21)

[sub_resource type="SpriteFrames" id="SpriteFrames_tyhy8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwxf0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_40aov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxvkh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qj10q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0ayi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ovep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2a8n")
}],
"loop": false,
"name": &"damage",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vh03k")
}],
"loop": true,
"name": &"empty",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mr4b")
}],
"loop": true,
"name": &"full",
"speed": 5.0
}]

[node name="HP_UI" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_5xtq0")
metadata/_edit_vertical_guides_ = []

[node name="heart_1" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(12, 12)
sprite_frames = SubResource("SpriteFrames_tyhy8")
animation = &"full"

[node name="heart_2" type="AnimatedSprite2D" parent="."]
position = Vector2(30, 12)
sprite_frames = SubResource("SpriteFrames_tyhy8")
animation = &"full"

[node name="heart_3" type="AnimatedSprite2D" parent="."]
position = Vector2(48, 12)
sprite_frames = SubResource("SpriteFrames_tyhy8")
animation = &"full"

[connection signal="animation_finished" from="heart_1" to="." method="_on_heart_1_animation_finished"]
[connection signal="animation_finished" from="heart_2" to="." method="_on_heart_2_animation_finished"]
[connection signal="animation_finished" from="heart_3" to="." method="_on_heart_3_animation_finished"]
